--- a/pom.xml
+++ b/pom.xml
@@ -3,31 +3,42 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <packaging>pom</packaging>
 
-    <groupId>com.atguigu</groupId>
-    <artifactId>fan_she</artifactId>
-    <version>1.0-SNAPSHOT</version>
+
+    <groupId>com.wenxiangcn</groupId>
+    <artifactId>wx-backend-java-sms</artifactId>
+    <version>2.0.0</version>
+
 
     <properties>
-        <!--junit版本-->
         <junit.version>4.12</junit.version>
-        <!--lombok版本-->
         <lombok.version>1.16.6</lombok.version>
     </properties>
 
     <dependencies>
-        <!--junit-->
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>${junit.version}</version>
-        </dependency>
 
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>${lombok.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>${junit.version}</version>
+        </dependency>
+
+
     </dependencies>
+
+    <repositories>
+        <repository>
+            <id>alimaven</id>
+            <name>aliyun maven</name>
+            <url>http://maven.aliyun.com/nexus/content/groups/public/</url>
+        </repository>
+    </repositories>
 
 </project>
